--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
-VITE_API_BASE_URL=http://localhost:3001/api/shopping
+VITE_API_BASE_URL=https://my-backend.onrender.com/api
 VITE_GOOGLE_SHOPPING_API_KEY="AIzaSyBabZdKyDyDtG6C9q2D0jvtYClTs1sM-EA"
 VITE_GOOGLE_SHOPPING_COUNTRY="ES"
 VITE_GOOGLE_SHOPPING_MAX_RESULTS="3"
@@ -9,3 +8,4 @@ VITE_FIREBASE_PROJECT_ID="YOUR_FIREBASE_PROJECT_ID"
 VITE_FIREBASE_STORAGE_BUCKET="YOUR_FIREBASE_STORAGE_BUCKET"
 VITE_FIREBASE_MESSAGING_SENDER_ID="YOUR_FIREBASE_MESSAGING_SENDER_ID"
 VITE_FIREBASE_APP_ID="YOUR_FIREBASE_APP_ID"
+
