--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=https://my-backend.onrender.com/api
+VITE_API_BASE_URL=https://dresso-app.onrender.com/api
 VITE_GOOGLE_SHOPPING_API_KEY="AIzaSyBabZdKyDyDtG6C9q2D0jvtYClTs1sM-EA"
 VITE_GOOGLE_SHOPPING_COUNTRY="ES"
 VITE_GOOGLE_SHOPPING_MAX_RESULTS="3"
